# cuckoo-firmware

./: CMakeLists.txt  LICENSE  README.md
cmake/: nrf52.cmake
common/: CMakeLists.txt
common/include/ble/: ble_central_connection_delegate.h  ble_central_connection_interface.h  ble_manager_delegate.h  ble_manager_interface.h
common/include/events/: event_dispatcher_interface.h  event_observer.h  events.h
common/include/protocol/: commands.h
common/include/rssi/: rssi_reader_delegate.h  rssi_reader_interface.h
common/include/storage/: flash_storage_interface.h  session_storage.h  session_storage_events.h
common/include/time/: real_time_clock_interface.h
common/include/utils/: byte_utils.h  log.h  queue.h
common/src/ble/: ble_central_connection_delegate.cpp
common/src/rssi/: rssi_reader_delegate.cpp
common/src/storage/: session_storage.cpp
common/src/utils/: byte_utils.cpp
config/: common_config.h  pca10059.ld  sdk_config.h
include/ble/: advertising_manager.h  attribute_table.h  ble_central_connection.h  ble_manager.h
include/events/: event_dispatcher.h
include/rssi/: rssi_reader.h
include/storage/: flash_storage.h
include/time/: real_time_clock.h
src/: main.cpp
src/ble/: advertising_manager.cpp  attribute_table.cpp  ble_central_connection.cpp  ble_manager.cpp
src/events/: event_dispatcher.cpp
src/rssi/: rssi_reader.cpp
src/storage/: flash_storage.cpp
src/time/: real_time_clock.cpp
tests/: CMakeLists.txt
tests/include/events/: mock_event_dispatcher.h
tests/include/storage/: mock_flash_storage.h
tests/src/: main.cpp
tests/src/events/: mock_event_dispatcher.cpp
tests/src/protocol/: commands.cpp
tests/src/storage/: mock_flash_storage.cpp
tests/src/utils/: byte_utils.cpp  queue.cpp
